# Docker_Unitree_Majoco

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker_setup.sh  start_dev.sh  stop_dev.sh
go2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
go2_ws/install/movement/lib/movement/: back_and_forth  gamepad_controller  keyboard_control
go2_ws/install/movement/share/movement/: local_setup.sh  package.sh
go2_ws/log/: latest_build
go2_ws/src/cv/: package.xml  setup.py
go2_ws/src/cv/cv/: april_tag.py
go2_ws/src/cv/launch/: launch.py
go2_ws/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
go2_ws/src/install/movement/lib/movement/: back_and_forth  gamepad_controller  keyboard_control
go2_ws/src/install/movement/share/ament_index/resource_index/parent_prefix_path/: movement
go2_ws/src/install/movement/share/movement/: package.sh
go2_ws/src/log/: latest_build
go2_ws/src/movement/: CMakeLists.txt  package.xml
go2_ws/src/movement/include/: gamepad_controller.h
go2_ws/src/movement/launch/: launch.py
go2_ws/src/movement/src/: back_and_forth.cpp  gamepad_controller.cpp  keyboard_control.cpp
scripts/: start.sh  supervisord.conf
